revisions to module 2-v

--- a/modules/2-V/day1.tex
+++ b/modules/2-V/day1.tex
@@ -6,7 +6,7 @@
 % have students capture 8 properties of R2 from list of 11
 % include ca=b, unique equidistant, nonzero orthogonal
 
-\begin{activity}{25}
+\begin{activity}{20}\smallSlideText
 Consider each of the following vector properties. Label each property
 with \(\IR^1\), \(\IR^2\), and/or \(\IR^3\) if that property holds for
 Euclidean vectors/scalars \(\vect u,\vect v,\vect w\) of that dimension.
@@ -77,22 +77,17 @@ Euclidean vectors/scalars \(\vect u,\vect v,\vect w\) of that dimension.
 \begin{activity}{25}
   Consider the following vector space that models motion along the curve
   \(y=e^x\). Let \(V=\{(x,y):y=e^x\}\), where
-  \((a_1,b_1)+(a_2,b_2)=(a_1+a_2,b_1b_2)\), and \(c(a,b)=(ca,b^c)\).
+  \((x_1,y_1)\oplus (x_2,y_2)=(x_1+x_2,y_1y_2)\), and
+  \(c(x,y)=(cx,y^c)\).
 
-  \begin{subactivity}
-    Verify that \(3((1,e)+(-2,\frac{1}{e^2}))=
-    3(1,e)+3(-2,\frac{1}{e^2})\).
-  \end{subactivity}
+  Prove that \(V\) paired with these operations satisfies all the vector space
+  properties.
 
-  \begin{TBLnote}
-    Draw a visualization of these vectors by sketching ``curved''
-    vectors in the \(xy\) plane.
-  \end{TBLnote}
+  \vectorSpaceProperties
 
-  \begin{subactivity}
-    Prove the scalar distribution property for this space:
-    \(c(\vect u+\vect v)=c\vect u+c\vect v\).
-  \end{subactivity}
+  For example, Addition Commutivity may be proven by showing
+  \[\vect u\oplus \vect v=(x_1,y_1)\oplus (x_2,y_2)=(x_1+x_2,y_1y_2)
+  =(x_2+x_1,y_2y_1)=(x_2,y_2)+(x_1,y_1)=\vect v\oplus \vect u\]
 \end{activity}
 
 
