--- a/modules/2-V/day2.tex
+++ b/modules/2-V/day2.tex
@@ -18,7 +18,7 @@
   \end{itemize}
 \end{remark}
 
-\begin{activity}{15}
+\begin{activity}{10}
   Let \(V=\{(a,b):a,b\text{ are real numbers}\}\), where \((a_1,b_1)+(a_2,b_2)=
   (a_1+b_1+a_2+b_2,b_1^2+b_2^2)\) and \(c(a,b)=(a^c,b+c)\). Show that
   this is not a vector space by finding a counterexample
@@ -111,7 +111,7 @@
 %   \end{subactivity}
 % \end{activity}
 
-\begin{activity}{10}
+\begin{activity}{15}
   The vector
   \(\begin{bmatrix}-1\\-6\\1\end{bmatrix}\) belongs to
   \(\vspan\left\{\begin{bmatrix}1\\0\\-3\end{bmatrix},
@@ -130,8 +130,8 @@
     %  -3x_1 &\,+\,& 2x_2 &\,=\,&  1
     % \end{alignat*}
   \begin{subactivity}
-    Solve this system. (From now on, feel free to use a calculator
-    to solve linear systems.)
+    Solve this system. (Remember, you should use a calculator to help
+    find \(\RREF\).)
     % \[\RREF
     %   \begin{bmatrix}[cc|c]
     %     1 & -1 & -1 \\
