add class day info to handouts, closes #44

--- a/course-notes-handout.sty
+++ b/course-notes-handout.sty
@@ -17,7 +17,7 @@
   % \newpage
   \setcounter{ClassDayCounter}{#2}
   \setcounter{ActivityCounter}{0}
-  % \section*{Application Activities - Module \moduleLetter{} Part #1 - Class Day \theClassDayCounter}
+  \section*{Definitions - Module \moduleLetter{} Part #1 - Class Day \theClassDayCounter}
 
   \BODY
 }
