--- a/assessments/problem-library.tex
+++ b/assessments/problem-library.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{amsmath,ifthen,amsthm,amssymb,enumerate}
+\usepackage[margin=1in]{geometry}
 
 %Counters for problems and subproblems
 \newcounter{problem}
@@ -25,7 +26,7 @@
 {
 	\end{flushleft}
 	\ifthenelse{ \equal{\value{subproblem}}{0}}{\vfill}{}
-	\setcounter{subproblem}{0}	
+	\setcounter{subproblem}{0}
 }
 
 \newenvironment{solution}
@@ -95,6 +96,6 @@
 %\input{problems/G1.tex} \newpage
 %\input{problems/G2.tex} \newpage
 %\input{problems/G3.tex} \newpage
-%\input{problems/G4.tex} 
+%\input{problems/G4.tex}
 
 \end{document}
