--- a/assessments/problems/V2.tex
+++ b/assessments/problems/V2.tex
@@ -24,11 +24,11 @@ Determine if  $\begin{bmatrix} 0 \\ 0 \\ 2 \end{bmatrix}$ can be written as a li
 \begin{solution}
 $$\RREF\left(\begin{bmatrix}[cc|c] -1 & 1 & 0 \\ -9 & 5 & 0 \\ 15 & -5 & 2 \end{bmatrix} \right) = \begin{bmatrix}[cc|c] 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}$$
 Since this system has no solution, $\begin{bmatrix} 0 \\ 0 \\ 2 \end{bmatrix}$ cannot be written as a linear combination of the vectors $\begin{bmatrix} -1 \\ -9 \\ 15 \end{bmatrix}$ and $\begin{bmatrix} 1 \\ 5 \\ -5 \end{bmatrix}$.
- 
+
 \end{solution}
 
 
-\begin{problem}{V2} 
+\begin{problem}{V2}
 Determine if $\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}$ is a linear combination of the vectors $\begin{bmatrix} 2 \\ 3 \\ -1 \end{bmatrix}$, $\begin{bmatrix} 1 \\ -1 \\ 0 \end{bmatrix}$, and $\begin{bmatrix} -3 \\ -2 \\ 5 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
@@ -43,3 +43,103 @@ $$\RREF\left(\begin{bmatrix}[ccc|c] 3 & 1 & 5 & 1 \\ 0 & -1 & 1 & 4 \\ -1 & 4 & 
 So $\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}$ is not a linear combination of the three vectors.
 \end{solution}
 
+
+\begin{problem}{V2}
+  Determine if
+  \(\begin{bmatrix} 0 \\ -1 \\ 6 \\ -7 \end{bmatrix}\)
+  belongs to the span of the set
+  \(\left\{
+    \begin{bmatrix} 2 \\ 0 \\ -1 \\ 5 \end{bmatrix},
+    \begin{bmatrix} 4 \\ -1 \\ 4 \\ 3 \end{bmatrix}
+    \right\}
+  \).
+\end{problem}
+\begin{solution}
+  Since
+  \[
+    \RREF\left(
+      \begin{bmatrix}[cc|c]
+        2 & 4 & 0 \\
+        0 & -1 & -1 \\
+        -1 & 4 & 6 \\
+        5 & 3 & -7
+      \end{bmatrix}
+    \right) =
+    \begin{bmatrix}[cc|c]
+      1 & 0 & -2 \\
+      0 & 1 & 1 \\
+      0 & 0 & 0 \\
+      0 & 0 & 0
+    \end{bmatrix}
+  \]
+  does not contain a contradiction,
+  \(\begin{bmatrix} 0 \\ -1 \\ 6 \\ -7 \end{bmatrix}\) is
+  a linear combination of the three vectors.
+\end{solution}
+
+
+\begin{problem}{V2}
+  Determine if
+  \(\begin{bmatrix} 4 \\ -1 \\ 6 \\ -7 \end{bmatrix}\)
+  belongs to the span of the set
+  \(\left\{
+    \begin{bmatrix} 2 \\ 0 \\ -1 \\ 5 \end{bmatrix},
+    \begin{bmatrix} 4 \\ -1 \\ 4 \\ 3 \end{bmatrix}
+    \right\}
+  \).
+\end{problem}
+\begin{solution}
+  Since
+  \[
+    \RREF\left(
+      \begin{bmatrix}[cc|c]
+        2 & 4 & 4 \\
+        0 & -1 & -1 \\
+        -1 & 4 & 6 \\
+        5 & 3 & -7
+      \end{bmatrix}
+    \right) =
+    \begin{bmatrix}[cc|c]
+      1 & 0 & 0 \\
+      0 & 1 & 0 \\
+      0 & 0 & 1 \\
+      0 & 0 & 0
+    \end{bmatrix}
+  \]
+  contains the contradiction \(0=1\),
+  \(\begin{bmatrix} 4 \\ -1 \\ 6 \\ -7 \end{bmatrix}\) is
+  not a linear combination of the three vectors.
+\end{solution}
+
+
+\begin{problem}{V2}
+  Determine if
+  \(\begin{bmatrix} 3 \\ -2 \\ 4 \end{bmatrix}\)
+  belongs to the span of the set
+  \(\left\{
+    \begin{bmatrix} 1 \\ 2 \\ -3 \end{bmatrix},
+    \begin{bmatrix} 2 \\ 4 \\ -6 \end{bmatrix},
+    \begin{bmatrix} 0 \\ 0 \\ 0 \end{bmatrix}
+    \right\}
+  \).
+\end{problem}
+\begin{solution}
+  Since
+  \[
+    \RREF\left(
+      \begin{bmatrix}[ccc|c]
+        1 & 2 & 0 & 3 \\
+        2 & 4 & 0 & -2 \\
+        -3 & -6 & 0 & 4
+      \end{bmatrix}
+    \right) =
+    \begin{bmatrix}[ccc|c]
+      1 & 2 & 0 & 0 \\
+      0 & 0 & 0 & 1 \\
+      0 & 0 & 0 & 0
+    \end{bmatrix}
+  \]
+  contains the contradiction \(0=1\),
+  \(\begin{bmatrix} 3 \\ -2 \\ 4 \end{bmatrix}\) is
+  not a linear combination of the three vectors.
+\end{solution}
