--- a/assessments/problems/V3.tex
+++ b/assessments/problems/V3.tex
@@ -16,7 +16,7 @@ $$\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \
 Since there are zero rows, they do not span.  Alternatively, by inspection $\begin{bmatrix} 3 \\ 3 \\ 6 \\ 3 \end{bmatrix}=3\begin{bmatrix} 1 \\ 1 \\ 2 \\1 \end{bmatrix}$, so the set is linearly dependent, so it spans a subspace of dimension at most 3, therefore it does not span $\IR^4$.
 \end{solution}
 
-\begin{problem}{V3} 
+\begin{problem}{V3}
 Determine if the vectors  $\begin{bmatrix} 8 \\ 21 \\ -7 \end{bmatrix}$, $\begin{bmatrix} -3 \\ -8 \\ 3 \end{bmatrix}$, $\begin{bmatrix} -1 \\ -3 \\ 2 \end{bmatrix}$, and $\begin{bmatrix} 4 \\ 11 \\ -5 \end{bmatrix}$ span $\IR^3$.
 \end{problem}
 \begin{solution}
@@ -24,7 +24,7 @@ $$\RREF\left(\begin{bmatrix} 8 & -3 & -1 & 4 \\ 21 & -8 & -3 & 11 \\ -7 & 3 & 2 
 Since the rank is less than 3, they do not span $\IR^3$.
 \end{solution}
 
-\begin{problem}{V3} 
+\begin{problem}{V3}
 Determine if the vectors $\begin{bmatrix} 2 \\ 0 \\ -2 \\ 0 \end{bmatrix}$, $\begin{bmatrix} 3 \\ 1 \\ 3 \\ 6 \end{bmatrix}$, $\begin{bmatrix} 0 \\ 0 \\ 1 \\ 1 \end{bmatrix}$, and $\begin{bmatrix}1 \\ 2 \\ 0 \\ 1 \end{bmatrix}$ span $\IR^4$.
 \end{problem}
 \begin{solution}
@@ -38,4 +38,74 @@ Determine if the vectors $\begin{bmatrix} 1 \\ 0 \\ 2 \\1 \end{bmatrix}$, $\begi
 \begin{solution}
 $$\RREF\left(\begin{bmatrix}1 & 3 & 0 & -1 \\ 0 & 1 & 3 & 1 \\ 2 & 0 & 0 & -1 \\ 1 & -3 & -2 & -1 \end{bmatrix} \right) =\begin{bmatrix} 1 & 0 & 0 & 0 \\ 0 & 1 & 0 & 0 \\ 0 & 0 & 1 & 0 \\ 0 & 0 & 0 & 1 \end{bmatrix}$$
 Since every row contains a pivot, the vectors span $\IR^4$.
+\end{solution}
+
+\begin{problem}{V3}
+Does
+\(
+  \operatorname{span}\left\{
+    \begin{bmatrix} 2 \\ -1 \\ 4 \end{bmatrix},
+    \begin{bmatrix} 3 \\ 12 \\ -9 \end{bmatrix},
+    \begin{bmatrix} 1 \\ 4 \\ -3 \end{bmatrix},
+    \begin{bmatrix} -4 \\ 2 \\ -8 \end{bmatrix}
+  \right\} = \IR^3
+\)?
+\end{problem}
+\begin{solution}
+Since
+\[
+  \RREF\begin{bmatrix}
+    2 & 3 & 1 & -4 \\
+    -1 & 12 & 4 & 2 \\
+    4 & -9 & -3 & -8
+  \end{bmatrix} =
+  \begin{bmatrix}
+    1 & 0 & 0 & -2 \\
+    0 & 1 & 1/3 & 0 \\
+    0 & 0 & 0 & 0
+  \end{bmatrix}
+\]
+has a zero row, the vectors fail to span \(\IR^3\).
+\end{solution}
+
+\begin{problem}{V3}
+Does
+\(
+  \operatorname{span}\left\{
+    \begin{bmatrix} 2 \\ -1 \\ 4 \end{bmatrix},
+    \begin{bmatrix} 3 \\ 12 \\ -9 \end{bmatrix},
+    \begin{bmatrix} 1 \\ 2 \\ 3 \end{bmatrix},
+    \begin{bmatrix} -4 \\ 2 \\ -8 \end{bmatrix}
+  \right\} = \IR^3
+\)?
+\end{problem}
+\begin{solution}
+Since
+\[
+  \RREF\begin{bmatrix}
+    2 & 3 & 1 & -4 \\
+    -1 & 12 & 2 & 2 \\
+    4 & -9 & 3 & -8
+  \end{bmatrix} =
+  \begin{bmatrix}
+    1 & 0 & 0 & -2 \\
+    0 & 1 & 0 & 0 \\
+    0 & 0 & 1 & 0
+  \end{bmatrix}
+\]
+lacks a zero row, the vectors span \(\IR^3\).
+\end{solution}
+
+\begin{problem}{V3}
+Does
+\(
+  \operatorname{span}\left\{
+    \begin{bmatrix} 2 \\ -1 \\ 4 \\ 2 \\ 1 \end{bmatrix},
+    \begin{bmatrix} -1 \\ 3 \\ 5 \\ 2 \\ 0 \end{bmatrix},
+    \begin{bmatrix} 1 \\ 0 \\ 5 \\ 1 \\ -3 \end{bmatrix}
+  \right\} = \IR^5
+\)?
+\end{problem}
+\begin{solution}
+Since there are only three vectors, they cannot span \(\IR^5\).
 \end{solution}
