--- a/assessments/problems/E2.tex
+++ b/assessments/problems/E2.tex
@@ -28,6 +28,8 @@ $$\begin{bmatrix}
  -1 & 1 & 2 \\
  0 & 2 & 6
 \end{bmatrix}
+$$
+$$
 \sim
 \begin{bmatrix}
  1 & 0 & 1 \\
@@ -104,7 +106,8 @@ $$\begin{bmatrix}[ccc|c]
 1 & -\frac{1}{3} & 0 & -\frac{2}{3} \\
  0 & -\frac{2}{3} & -1 & \frac{2}{3} \\
  0 & 2 & 3 & -2
-\end{bmatrix} \sim
+\end{bmatrix} $$
+$$\sim
 \begin{bmatrix}[ccc|c]
 1 & -\frac{1}{3} & 0 & -\frac{2}{3} \\
  0 & 1 & \frac{3}{2} & -1 \\
@@ -136,7 +139,8 @@ $$\begin{bmatrix}[cccc|c]
  1 & 0 & -5 & 0 & 1 \\
  2 & 1 & -1 & 0 & 5 \\
  3 & -1 & 0 & -2 & 0
-\end{bmatrix} \sim
+\end{bmatrix} $$
+$$\sim
 \begin{bmatrix}[cccc|c]
  1 & 0 & -5 & 0 & 1  \\
  0 & 1 & 9 & 0 & 3 \\
