Minor changes to module V

--- a/modules/2-V/day2.tex
+++ b/modules/2-V/day2.tex
@@ -32,6 +32,11 @@
   \(\{\vect v_1,\vect v_2,\dots,\vect v_m\}\) is given by
   \(c_1\vect v_1+c_2\vect v_2+\dots+c_m\vect v_m\) for any choice of
   scalar multiples \(c_1,c_2,\dots,c_m\).
+
+	\ \\
+	\ \\
+
+  For example, we say $\begin{bmatrix}3 \\0 \\ 5\end{bmatrix}$ is a linear combination of the vectors $\begin{bmatrix} 1 \\ -1 \\ 2 \end{bmatrix}$ and $\begin{bmatrix} 1 \\ 2 \\ 1 \end{bmatrix}$ since $$\begin{bmatrix} 3 \\ 0 \\ 5 \end{bmatrix} = 2 \begin{bmatrix} 1 \\ -1 \\ 2 \end{bmatrix} + 1\begin{bmatrix} 1 \\ 2 \\ 1 \end{bmatrix}$$
 \end{definition}
 
 \begin{definition}
