--- a/modules/2-V/day3.tex
+++ b/modules/2-V/day3.tex
@@ -63,11 +63,25 @@
 
 \begin{activity}{10}
   How many vectors are required to span \(\IR^2\)?
-  Sketch a drawing in the \(xy\) plane to support your guess.
+  Sketch a drawing in the \(xy\) plane to support your answer.
+  \begin{enumerate}[(a)]
+  \item $1$
+  \item $2$
+  \item $3$
+  \item $4$
+  \item Infinitely Many
+  \end{enumerate}
 \end{activity}
 
 \begin{activity}{5}
   How many vectors are required to span \(\IR^3\)?
+  \begin{enumerate}[(a)]
+  \item $1$
+  \item $2$
+  \item $3$
+  \item $4$
+  \item Infinitely Many
+  \end{enumerate}
 \end{activity}
 
 
