--- a/modules/2-V/day4.tex
+++ b/modules/2-V/day4.tex
@@ -137,7 +137,7 @@
     a,b\text{ are real numbers}
     \right\}
   \]
-  is a subspace of \(\IR^{2\times 2}\) by selecting a Euclidean
+  is a subspace of \(\IR^{2\times 2}\) by identifying a Euclidean
   space isomorphic to \(S\).
 \end{activity}
 
