fix typo in E4 problem

--- a/assessments/problems/E4.tex
+++ b/assessments/problems/E4.tex
@@ -166,7 +166,8 @@ It follows that the basis for the solution set is given by \(\left\{
 \end{solution}
 
 \begin{problem}{E4}
-Find the solution set for the following system of linear equations.
+Find a basis for the solution set to the homogeneous system of equations
+given by
 \begin{align*}
 2x_1-2x_2+6x_3-x_4 &=0 \\
 3x_1+6x_3+x_4 &=0 \\
