--- a/assessments/problems/S2.tex
+++ b/assessments/problems/S2.tex
@@ -15,3 +15,20 @@ $$\RREF\left(\begin{bmatrix} 1 & 3 & 2 \\ 1 & -1 & 0 \\ -1 & 1 & -2 \end{bmatrix
 Since the resulting matrix is the identity matrix, it is a basis.
 \end{solution}
 
+
+\begin{problem}{S2}
+Determine if the set $\left\{ x^3-x, x^2+x+1, x^3-x^2+2, 2x^2-1 \right\}$ is a basis of $\P_3$
+\end{problem}
+\begin{solution}
+$$\RREF\left(\begin{bmatrix} 1 & 0 & 1 & 0 \\ 0 & 1 & -1 & 2 \\ -1 & 1 & 0 & 0 \\ 0 & 1 & 2 & -1 \end{bmatrix} \right)= \begin{bmatrix} 1 & 0 &0 & 1 \\ 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & -1 \\ 0 & 0 & 0 & 0 \end{bmatrix}$$
+Since the resulting matrix is not the identity matrix, it is not a basis.
+\end{solution}
+
+
+\begin{problem}{S2}
+Determine if the set $\left\{ \begin{bmatrix} 0 \\ 1 \\ 1 \\ 1 \end{bmatrix}, \begin{bmatrix} 1 \\ -1 \\ 0 \\ 2 \end{bmatrix}, \begin{bmatrix} 1 \\ 0 \\ -1 \\ 0 \end{bmatrix}, \begin{bmatrix}0 \\ 2 \\ 0 \\ -1 \end{bmatrix} \right\}$ is a basis of $\IR^4$.
+\end{problem}
+\begin{solution}
+$$\RREF\left(\begin{bmatrix} 0 & 1 & 1 & 0 \\ 1 & -1 & 0 & 2   \\ 1 & 0 & -1 & 0  \\ 1 & 2 & 0 & -1  \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 0 & 1  \\ 0 & 1 & 0 & -1  \\ 0 & 0 & 1 & 1  \\ 0 & 0 & 0 & 0 \end{bmatrix} $$
+Since this is not the identity matrix, the set is not a basis.
+\end{solution}
