avoid confusing vector notation for activity 8.6

--- a/modules/2-V/day2.tex
+++ b/modules/2-V/day2.tex
@@ -67,14 +67,15 @@
   Consider \(\vspan\left\{\begin{bmatrix}1\\2\end{bmatrix},
   \begin{bmatrix}-1\\1\end{bmatrix}\right\}\).
   \begin{subactivity}
-    Sketch
-    \(c_1\begin{bmatrix}1\\2\end{bmatrix}+
-    c_2\begin{bmatrix}-1\\1\end{bmatrix}\) in the \(xy\) plane
-    for \(\begin{bmatrix}c_1\\c_2\end{bmatrix}=
-    \begin{bmatrix}1\\0\end{bmatrix},
-    \begin{bmatrix}0\\1\end{bmatrix},
-    \begin{bmatrix}2\\0\end{bmatrix},
-    \begin{bmatrix}2\\1\end{bmatrix}\).
+    Sketch the following linear combinations in the \(xy\) plane:
+    \(1\begin{bmatrix}1\\2\end{bmatrix}+
+    0\begin{bmatrix}-1\\1\end{bmatrix}\),
+    \(0\begin{bmatrix}1\\2\end{bmatrix}+
+    1\begin{bmatrix}-1\\1\end{bmatrix}\),
+    \(2\begin{bmatrix}1\\2\end{bmatrix}+
+    0\begin{bmatrix}-1\\1\end{bmatrix}\),
+    \(2\begin{bmatrix}1\\2\end{bmatrix}+
+    1\begin{bmatrix}-1\\1\end{bmatrix}\).
   \end{subactivity}
   \begin{subactivity}
     Sketch a representation of all the vectors given by
