use o-operations in activity

--- a/modules/2-V/day1.tex
+++ b/modules/2-V/day1.tex
@@ -107,7 +107,7 @@ Euclidean vectors/scalars \(\vect u,\vect v,\vect w\) of that dimension.
             \(a\odot(b\odot\vect v)=(ab)\odot\vect v\).
       \item \textbf{Scalar multiplication identity.}
 
-            \(1\vect v=\vect v\).
+            \(1\odot\vect v=\vect v\).
       \item \textbf{Scalar distribution.}
 
             \(a\odot(\vect u\oplus\vect v)=
