--- a/modules/2-V/day2.tex
+++ b/modules/2-V/day2.tex
@@ -19,12 +19,13 @@
 \end{remark}
 
 \begin{activity}{10}
-  Let \(V=\{(a,b):a,b\text{ are real numbers}\}\), where \((a_1,b_1)+(a_2,b_2)=
-  (a_1+b_1+a_2+b_2,b_1^2+b_2^2)\) and \(c(a,b)=(a^c,b+c)\). Show that
+  Let \(V=\{(a,b):a,b\text{ are real numbers}\}\), where
+  \((a_1,b_1)\oplus(a_2,b_2)=
+  (a_1+b_1+a_2+b_2,b_1^2+b_2^2)\) and \(c\odot(a,b)=(a^c,b+c)\). Show that
   this is not a vector space by finding a counterexample
   that does not satisfy one of the vector space properties.
 
-  \vectorSpaceProperties
+  \vectorSpacePropertiesO
 \end{activity}
 
 \begin{definition}
