--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -112,6 +112,42 @@
 \end{multicols}
 }
 
+\newcommand{\vectorSpacePropertiesO}{
+\begin{multicols}{2}
+\begin{itemize}
+  \item \textbf{Addition associativity.}
+
+        \(\vect u\oplus(\vect v\oplus\vect w)=
+        (\vect u\oplus\vect v)\oplus\vect w\).
+  \item \textbf{Addition commutivity.}
+
+        \(\vect u\oplus\vect v=
+        \vect v\oplus\vect u\).
+  \item \textbf{Addition identity.}
+
+        There exists some \(\vect 0\)
+        where \(\vect v\oplus\vect 0=\vect v\).
+  \item \textbf{Addition inverse.}
+
+        There exists some \(-\vect v\)
+        where \(\vect v\oplus(-\vect v)=\vect 0\).
+  \item \textbf{Scalar multiplication associativity.}
+
+        \(a\odot(b\odot\vect v)=(ab)\odot\vect v\).
+  \item \textbf{Scalar multiplication identity.}
+
+        \(1\odot\vect v=\vect v\).
+  \item \textbf{Scalar distribution.}
+
+        \(a\odot(\vect u\oplus\vect v)=
+        (a\odot\vect u)\oplus (a\odot\vect v)\).
+  \item \textbf{Vector distribution.}
+
+        \((a+b)\odot\vect v=(a\odot\vect v)\oplus (b\odot\vect v)\).
+\end{itemize}
+\end{multicols}
+}
+
 
 %This markup is for defining specific commands that vary depending on section.
 \newcommand{\sem}{Fall 2017}
