--- a/modules/3-S/readiness.tex
+++ b/modules/3-S/readiness.tex
@@ -30,13 +30,9 @@ systems \standardList{E1,E2,E3}.
   \end{bmatrix}
   \]
 
+%Correct: D
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \(
-        \begin{bmatrix}
-          2 \\ 4 \\ 6
-        \end{bmatrix}
-      \) % correct
 \item \(
         \begin{bmatrix}
           1 \\ -2 \\ -4
@@ -52,8 +48,17 @@ systems \standardList{E1,E2,E3}.
           1 \\ 2 \\ 3
         \end{bmatrix}
       \)
+\item \(
+        \begin{bmatrix}
+          2 \\ 4 \\ 6
+        \end{bmatrix}
+      \) % correct
+
 \end{readinessAssuranceTestChoices}
 \end{multicols}
+
+
+
 
 \item Express the following system of linear equations as an augmented matrix.
 \begin{alignat*}{4}
@@ -62,6 +67,7 @@ systems \standardList{E1,E2,E3}.
  -3x_1 &\,+\,& 4x_2 &\,+\,& x_3 &\,=\,& -7 \\
 \end{alignat*}
 
+%Correct: D
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
 \item \(
@@ -72,13 +78,6 @@ systems \standardList{E1,E2,E3}.
         0 & 1 & -7
       \end{bmatrix}
     \)
-\item \(
-      \begin{bmatrix}[ccc|c]
-        2 & 1 & 4 & 0 \\
-        1 & 1 & 1 & 1 \\
-        -3 & 4 & 1 & -7
-      \end{bmatrix}
-    \) % correct
 \item \(
       \begin{bmatrix}[cc|c]
         1 & 1 & 1 \\
@@ -94,8 +93,18 @@ systems \standardList{E1,E2,E3}.
         -3 & 4 & -7
       \end{bmatrix}
     \)
+	\item \(
+      \begin{bmatrix}[ccc|c]
+        2 & 1 & 4 & 0 \\
+        1 & 1 & 1 & 1 \\
+        -3 & 4 & 1 & -7
+      \end{bmatrix}
+    \) % correct
+
 \end{readinessAssuranceTestChoices}
 \end{multicols}
+
+
 
 \item Find
   \(\RREF
@@ -105,7 +114,7 @@ systems \standardList{E1,E2,E3}.
       -2 & 0 & -2 \\
     \end{bmatrix}
   \).
-
+%Correct A
   \begin{multicols}{4}
   \begin{readinessAssuranceTestChoices}
   \item
@@ -143,6 +152,7 @@ systems \standardList{E1,E2,E3}.
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
+
   \item Solve the following system of linear equations.
   \begin{alignat*}{4}
     2x_1 &\,+\,& x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
@@ -150,16 +160,9 @@ systems \standardList{E1,E2,E3}.
    -3x_1 &\,+\,& 4x_2 &\,+\,& x_3 &\,=\,& -7 \\
   \end{alignat*}
 
+%Correct C
   \begin{multicols}{2}
   \begin{readinessAssuranceTestChoices}
-  \item \(
-          \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3
-          \end{bmatrix}=
-          \begin{bmatrix}
-            2 \\ 0 \\ -1
-          \end{bmatrix}
-        \) % correct
   \item \(
           \begin{bmatrix}
             x_1 \\ x_2 \\ x_3
@@ -179,17 +182,28 @@ systems \standardList{E1,E2,E3}.
           \begin{bmatrix}
             1 \\ 0 \\ 3
           \end{bmatrix}
-        \) for all real numbers \(a\)
+        \) for all real numbers \(a\)  
+	\item \(
+          \begin{bmatrix}
+            x_1 \\ x_2 \\ x_3
+          \end{bmatrix}=
+          \begin{bmatrix}
+            2 \\ 0 \\ -1
+          \end{bmatrix}
+        \) % correct
+
   \item No solutions
   \end{readinessAssuranceTestChoices}
   \end{multicols}
+
+
 
 \item Solve the following system of linear equations.
   \begin{alignat*}{5}
      x_1 &\,+\,& x_2 &\,+\,&  x_3 &\,+\,&  x_4 &\,=\,& 4 \\
      2x_1 &\,+\,& 3x_2 &\, \,&     &\,+\,&  x_4 &\,=\,& 0 \\
   \end{alignat*}
-
+%Correct B
   \begin{multicols}{2}
   \begin{readinessAssuranceTestChoices}
   \item \(
@@ -205,17 +219,6 @@ systems \standardList{E1,E2,E3}.
             x_1 \\ x_2 \\ x_3 \\ x_4
           \end{bmatrix}=
           \begin{bmatrix}
-            1 \\ 1 \\ 4 \\ -5
-          \end{bmatrix}+a
-          \begin{bmatrix}
-            0 \\ 3 \\ 1 \\ 1
-          \end{bmatrix}
-        \) for all real numbers \(a\)
-  \item \(
-          \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3 \\ x_4
-          \end{bmatrix}=
-          \begin{bmatrix}
             12 \\ -8 \\ 0 \\ 0
           \end{bmatrix}+a
           \begin{bmatrix}
@@ -224,34 +227,50 @@ systems \standardList{E1,E2,E3}.
           \begin{bmatrix}
             -2 \\ 1 \\ 0 \\ 1
           \end{bmatrix}
-        \) for all real numbers \(a,b\) % correct
-  \item No solutions
+        \) \\ for all real numbers \(a,b\) \\ % correct 
+		\item \(
+          \begin{bmatrix}
+            x_1 \\ x_2 \\ x_3 \\ x_4
+          \end{bmatrix}=
+          \begin{bmatrix}
+            1 \\ 1 \\ 4 \\ -5
+          \end{bmatrix}+a
+          \begin{bmatrix}
+            0 \\ 3 \\ 1 \\ 1
+          \end{bmatrix}
+        \) for all real numbers \(a\)
+
+  \item No solutions 
   \end{readinessAssuranceTestChoices}
   \end{multicols}
+
 
 \item How many vectors are required to span all of \(\IR^4\) (the space
   of Euclidean vectors with four components)?
-
+%Correct B
   \begin{multicols}{4}
   \begin{readinessAssuranceTestChoices}
-  \item 2
+  \item 3
+  \item 4 %Correct
+  \item 5 
+  \item Infinitely Many 
+  \end{readinessAssuranceTestChoices}
+  \end{multicols}
+
+
+\item How many vectors are required to span all of \(\P^3\) (the space
+  of polynomials of degree four or less)?
+%Correct B
+  \begin{multicols}{4}
+  \begin{readinessAssuranceTestChoices}
   \item 3
   \item 4 % correct
   \item 5
+  \item Infinitely Many
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
-\item How many vectors are required to span all of \(\P^4\) (the space
-  of polynomials of degree four or less)?
 
-  \begin{multicols}{4}
-  \begin{readinessAssuranceTestChoices}
-  \item 2
-  \item 3 % correct
-  \item 4
-  \item 5
-  \end{readinessAssuranceTestChoices}
-  \end{multicols}
 
 \item Which vector is a linear combination of \(
 \begin{bmatrix}
@@ -260,7 +279,7 @@ systems \standardList{E1,E2,E3}.
 \begin{bmatrix}
   -2 \\ 1 \\ 0 \\ 1
 \end{bmatrix}\)?
-
+%Correct C
   \begin{multicols}{4}
   \begin{readinessAssuranceTestChoices}
     \item \(
@@ -273,18 +292,20 @@ systems \standardList{E1,E2,E3}.
       0 \\ 0 \\ 3 \\ -7
     \end{bmatrix}
     \)
-    \item \(
+	\item \(
+    \begin{bmatrix}
+      -5 \\ 3 \\ 1 \\ 1
+    \end{bmatrix}
+    \) % correct    
+	\item \(
     \begin{bmatrix}
       2 \\ 2 \\ 0 \\ 1
     \end{bmatrix}
     \)
-    \item \(
-    \begin{bmatrix}
-      -5 \\ 3 \\ 1 \\ 1
-    \end{bmatrix}
-    \) % correct
+    
   \end{readinessAssuranceTestChoices}
   \end{multicols}
+
 
 \item Which vector belongs to \(\vspan\left\{
 \begin{bmatrix}
@@ -294,7 +315,7 @@ systems \standardList{E1,E2,E3}.
   -2 \\ 1 \\ 0 \\ 1
 \end{bmatrix}
 \right\}\)?
-
+%Correct C
   \begin{multicols}{4}
   \begin{readinessAssuranceTestChoices}
     \item \(
@@ -320,6 +341,7 @@ systems \standardList{E1,E2,E3}.
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
+%Correct A
 \item The graphical representation of \(\vspan\left\{
 \begin{bmatrix}
   1 \\ 2 \\ 3
