update V1 to directly reference vector property titles used in the notes (haven't built quizzes)

--- a/assessments/problems/V1.tex
+++ b/assessments/problems/V1.tex
@@ -5,7 +5,8 @@ x\oplus y  &= x+y-3 \\
 c \odot x &= cx-3(c-1)
 \end{align*}
 \begin{enumerate}[(a)]
-\item Show that this scalar multiplication $\odot$ is associative.
+\item Show that \textbf{scalar multiplication} is
+      \textbf{associative}: \(a\odot(b\odot x)=(ab)\odot x\).
 \item Determine if $V$ is a vector space or not.  Justify your answer
 \end{enumerate}
 \end{problem}
@@ -50,7 +51,8 @@ Let $V$ be the set of all points on the line $x+y=2$ with the operations, for an
 c \odot (x_1,y_1) &= (cx_1-(c-1), cy_1-(c-2))
 \end{align*}
 \begin{enumerate}[(a)]
-\item Show that this vector space has an additive identity element.
+\item Show that this vector space has an \textbf{additive identity} element
+      \(\mathbf{0}\) satisfying \((x,y)\oplus\mathbf{0}=(x,y)\).
 \item Determine if $V$ is a vector space or not.  Justify your answer.
 \end{enumerate}
 \end{problem}
@@ -93,7 +95,10 @@ Let $V$ be the set of all pairs of real numbers with the operations, for any $(x
 c \odot (x_1,y_1) &= (0, cy_1)
 \end{align*}
 \begin{enumerate}[(a)]
-\item Show that this scalar multiplication $\odot$ distributes over scalar addition.
+\item Show that scalar multiplication
+      \textbf{distributes vectors} over scalar addition:
+      \((c+d)\odot(x,y)=
+      c\odot(x,y) \oplus d\odot(x,y)\).
 \item Determine if $V$ is a vector space or not.  Justify your answer.
 \end{enumerate}
 \end{problem}
@@ -111,7 +116,10 @@ Let $V$ be the set of all pairs of real numbers with the operations, for any $(x
 c \odot (x_1,y_1) &= (c^2x_1, c^3y_1)
 \end{align*}
 \begin{enumerate}[(a)]
-\item Show that this scalar multiplication $\odot$ distributes over vector addition $\oplus$.
+\item Show that scalar multiplication \textbf{distributes scalars} over
+      vector addition:
+      \(c\odot((x_1,y_1) \oplus (x_2,y_2))=
+      c\odot(x_1,y_1) \oplus c\odot(x_2,y_2)\).
 \item Determine if $V$ is a vector space or not.  Justify your answer.
 \end{enumerate}
 \end{problem}
@@ -136,7 +144,10 @@ c \odot f &= c f^\prime
 \end{align*}
 (here $f^\prime$ denotes the derivative of $f$).
 \begin{enumerate}[(a)]
-\item Show that this scalar multiplication $\odot$ distributes over vector addition $\oplus$.
+\item Show that scalar multiplication \textbf{distributes scalars} over
+      vector addition:
+      \(c\odot(f \oplus g)=
+      c\odot f \oplus c\odot g\).
 \item Determine if $V$ is a vector space or not.  Justify your answer.
 \end{enumerate}
 \end{problem}
@@ -156,7 +167,8 @@ x \oplus y &= \sqrt{x^2+y^2} \\
 c \odot x &= c x
 \end{align*}
 \begin{enumerate}[(a)]
-\item Show that the vector addition $\oplus$ is associative.
+\item Show that the vector \textbf{addition} $\oplus$ is \textbf{associative}:
+      \(x \oplus (y \oplus z)=(x\oplus y)\oplus z\).
 \item Determine if $V$ is a vector space or not.  Justify your answer.
 \end{enumerate}
 \end{problem}
