Add M and G problems, #38, #39

--- a/assessments/problem-library.tex
+++ b/assessments/problem-library.tex
@@ -90,12 +90,12 @@
 \input{problems/A2.tex} \newpage
 \input{problems/A3.tex} \newpage
 \input{problems/A4.tex} \newpage
-%\input{problems/M1.tex} \newpage
-%\input{problems/M2.tex} \newpage
-%\input{problems/M3.tex} \newpage
-%\input{problems/G1.tex} \newpage
-%\input{problems/G2.tex} \newpage
-%\input{problems/G3.tex} \newpage
-%\input{problems/G4.tex}
+\input{problems/M1.tex} \newpage
+\input{problems/M2.tex} \newpage
+\input{problems/M3.tex} \newpage
+\input{problems/G1.tex} \newpage
+\input{problems/G2.tex} \newpage
+\input{problems/G3.tex} \newpage
+\input{problems/G4.tex}
 
 \end{document}
