--- a/modules/4-A/day3.tex
+++ b/modules/4-A/day3.tex
@@ -2,8 +2,16 @@
 % ^ leave for LaTeXTools build functionality
 
 \begin{applicationActivities}{3}{19}
+\begin{activity}{10}
+  \begin{subactivity}
+    Describe surjective linear transformations in terms of the image.
+  \end{subactivity}
+  \begin{subactivity}
+    Describe injective linear transformations in terms of the kernel.
+  \end{subactivity}
+\end{activity}
 
-\begin{activity}{0}
+\begin{activity}{15}
 Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (for the standard basis).  You have cards containing a number of statements about $T$ and $A$.  Sort them into groups of equivalent statements, and post them on your board.
 
 \begin{TBLnote}Card sort activity for 10-15 minutes: cards contain the following
@@ -25,13 +33,10 @@ Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (fo
 \end{TBLnote}
 \end{activity}
 
-\begin{activity}{0}
-\begin{TBLnote}Gallery walk \end{TBLnote}
+\begin{activity}{25}
+\begin{TBLnote}Gallery walk --3 minutes per board.  Then 10 minutes to wrap up discussion \end{TBLnote}
 Cycle around the room counter-clockwise.  If they have two things grouped together that you know are not equivalent, write a reason or counter-example on a sticky note.
 \end{activity}
 
-\begin{activity}{0}
-Come up with as many statements as you can, and add them to the appropriate group.
-\end{activity}
 
 \end{applicationActivities}
