--- a/modules/3-S/readiness.tex
+++ b/modules/3-S/readiness.tex
@@ -18,17 +18,16 @@ systems \standardList{E1,E2,E3}.
 
 \begin{readinessAssuranceTest}
 \setcounter{enumi}{20}
-\item Simplify the following Euclidean vector expression.
-  \[
-  4
+\item Simplify the following Euclidean vector expression.  
+$$4
   \begin{bmatrix}
     1 \\ 2 \\ 3
   \end{bmatrix}-
   2
   \begin{bmatrix}
     1 \\ 2 \\ 3
-  \end{bmatrix}
-  \]
+  \end{bmatrix}$$
+  
 
 %Correct: D
 \begin{multicols}{4}
@@ -182,7 +181,7 @@ systems \standardList{E1,E2,E3}.
           \begin{bmatrix}
             1 \\ 0 \\ 3
           \end{bmatrix}
-        \) for all real numbers \(a\)  
+        \)  for all real numbers \(a\)  
 	\item \(
           \begin{bmatrix}
             x_1 \\ x_2 \\ x_3
@@ -227,7 +226,7 @@ systems \standardList{E1,E2,E3}.
           \begin{bmatrix}
             -2 \\ 1 \\ 0 \\ 1
           \end{bmatrix}
-        \) \\ for all real numbers \(a,b\) \\ % correct 
+        \) \\ for all real numbers \(a,b\)  % correct 
 		\item \(
           \begin{bmatrix}
             x_1 \\ x_2 \\ x_3 \\ x_4
@@ -240,7 +239,8 @@ systems \standardList{E1,E2,E3}.
           \end{bmatrix}
         \) for all real numbers \(a\)
 
-  \item No solutions 
+  \item No solutions \\
+  \ \\ \ \\ 
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
@@ -341,13 +341,13 @@ systems \standardList{E1,E2,E3}.
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
+\vspace{1in}
+
 %Correct A
-\item The graphical representation of \(\vspan\left\{
+\item What best describes \(\vspan\left\{
 \begin{bmatrix}
   1 \\ 2 \\ 3
-\end{bmatrix}\right\}\) in three-dimensional Euclidean space \(\IR^3\) would be
-which of the following?
-
+\end{bmatrix}\right\}\) in three-dimensional Euclidean space \(\IR^3\)?
   \begin{multicols}{4}
   \begin{readinessAssuranceTestChoices}
     \item a line % correct
