--- a/rat/3-s-rat.tex
+++ b/rat/3-s-rat.tex
@@ -2,7 +2,7 @@
 %% This is file, `3-s-rat.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/09/18,14:50
+%% Generated on :  2017/09/19,16:00
 %% From source  :  readiness.tex
 %% Using options:  active,generate=rat/3-S-RAT.tex,extract-env={readinessAssuranceTest}
 %% 
@@ -18,16 +18,15 @@
 \begin{readinessAssuranceTest}
 \setcounter{enumi}{20}
 \item Simplify the following Euclidean vector expression.
-  \[
-  4
+$$4
   \begin{bmatrix}
     1 \\ 2 \\ 3
   \end{bmatrix}-
   2
   \begin{bmatrix}
     1 \\ 2 \\ 3
-  \end{bmatrix}
-  \]
+  \end{bmatrix}$$
+
 
 %Correct: D
 \begin{multicols}{4}
@@ -181,7 +180,7 @@
           \begin{bmatrix}
             1 \\ 0 \\ 3
           \end{bmatrix}
-        \) for all real numbers \(a\)
+        \)  for all real numbers \(a\)
 \item \(
           \begin{bmatrix}
             x_1 \\ x_2 \\ x_3
@@ -226,7 +225,7 @@
           \begin{bmatrix}
             -2 \\ 1 \\ 0 \\ 1
           \end{bmatrix}
-        \) \\ for all real numbers \(a,b\) \\ % correct
+        \) \\ for all real numbers \(a,b\)  % correct
 \item \(
           \begin{bmatrix}
             x_1 \\ x_2 \\ x_3 \\ x_4
@@ -239,7 +238,8 @@
           \end{bmatrix}
         \) for all real numbers \(a\)
 
-  \item No solutions
+  \item No solutions \\
+  \ \\ \ \\
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
@@ -340,13 +340,13 @@
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
+\vspace{1in}
+
 %Correct A
-\item The graphical representation of \(\vspan\left\{
+\item What best describes \(\vspan\left\{
 \begin{bmatrix}
   1 \\ 2 \\ 3
-\end{bmatrix}\right\}\) in three-dimensional Euclidean space \(\IR^3\) would be
-which of the following?
-
+\end{bmatrix}\right\}\) in three-dimensional Euclidean space \(\IR^3\)?
   \begin{multicols}{4}
   \begin{readinessAssuranceTestChoices}
     \item a line % correct
