Fix 3-S RAT, add problems addressing #48, #49

--- a/assessments/problems/M1.tex
+++ b/assessments/problems/M1.tex
@@ -25,9 +25,15 @@ $$DE = \begin{bmatrix} 6 & -1 \end{bmatrix}$$
 \end{solution}
 
 
-\begin{problem}{M1} 
-Let $M_1 = \begin{bmatrix} 3 & -1 \\ -1  & 0 \\ 1 & -1 \end{bmatrix}$ and $M_2 = \begin{bmatrix} 2 & -1 & -1 & 0 \\ 0 & 3 & 7 & -1 \end{bmatrix}$.  Determine if each of the products $M_1M_2$ and $M_2M_1$ can be computed, and if so, compute them.
+\begin{problem}{M1}
+Let 
+\begin{align*}
+A &= \begin{bmatrix} 1 & 3 & -1  \\ 0 & 0 & 7  \end{bmatrix} & B &= \begin{bmatrix} 0 & 1 & 7 & 7 \\ -1 & -2 & 0 & 4 \\ 0 & 0 & 1 & 5 \end{bmatrix} & C&=\begin{bmatrix} 3 & 2 \\ 0 & 1 \end{bmatrix}
+\end{align*}
+Determine which of the six products $AB$, $AC$, $BA$, $BC$, $CA$, $CB$ can be computed, and compute them.
 \end{problem}
 \begin{solution}
-$M_2M_1$ is not defined, and $M_1M_2 = \begin{bmatrix} 6 & 0 & -10 & 1 \\ -2 & 1 & 1 & 0 \\ 2 & -4 & -8 & 1 \end{bmatrix}$.
+$AB$ and $CA$ are the only ones that can be computed, and 
+$$AB = \begin{bmatrix} -3 & -5 & 6 & 14 \\ 0 & 0 & 7 & 35 \end{bmatrix}$$
+$$CA = \begin{bmatrix} 3 & 9 & 11  \\ 0 & 0 & 7    \end{bmatrix}$$
 \end{solution}
