--- a/modules/3-S/readiness.tex
+++ b/modules/3-S/readiness.tex
@@ -259,7 +259,7 @@ $$4
 
 
 \item How many vectors are required to span all of \(\P^3\) (the space
-  of polynomials of degree four or less)?
+  of polynomials of degree three or less)?
 %Correct B
   \begin{multicols}{4}
   \begin{readinessAssuranceTestChoices}
