--- a/rat/3-s-rat.tex
+++ b/rat/3-s-rat.tex
@@ -2,7 +2,7 @@
 %% This is file, `3-s-rat.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/09/19,16:00
+%% Generated on :  2017/09/20,15:35
 %% From source  :  readiness.tex
 %% Using options:  active,generate=rat/3-S-RAT.tex,extract-env={readinessAssuranceTest}
 %% 
@@ -258,7 +258,7 @@ $$4
 
 
 \item How many vectors are required to span all of \(\P^3\) (the space
-  of polynomials of degree four or less)?
+  of polynomials of degree three or less)?
 %Correct B
   \begin{multicols}{4}
   \begin{readinessAssuranceTestChoices}
