--- a/assessments/problems/A1.tex
+++ b/assessments/problems/A1.tex
@@ -6,3 +6,17 @@ $$\begin{bmatrix} 3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3 \\ 0 & 0 & 0 \end{bmatri
 \end{solution}
 
 
+\begin{problem}{A1}
+Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3 \\ x_4 \end{bmatrix} \right) = \begin{bmatrix} x_1+3x_3 \\ 3x_2-x_3 \end{bmatrix}$$. Write the matrix for $T$ with respect to the standard bases of $\IR^4$ and $\IR^2$.
+\end{problem}
+\begin{solution}
+$$\begin{bmatrix} 1 & 0 & 3 & 0 \\ 0 & 3 & -1 & 0 \end{bmatrix}$$
+\end{solution}
+
+
+\begin{problem}{A1}
+Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3  \end{bmatrix} \right) = \begin{bmatrix} x_2+3x_3 \end{bmatrix}$$. Write the matrix for $T$ with respect to the standard bases of $\IR^3$ and $\IR$.
+\end{problem}
+\begin{solution}
+$$\begin{bmatrix} 0 & 1 & 3 \end{bmatrix}$$
+\end{solution}
