--- a/assessments/problems/G1.tex
+++ b/assessments/problems/G1.tex
@@ -25,3 +25,17 @@ Compute the determinant of the matrix $\begin{bmatrix} 2 & 3 & 0 & 1 \\ -1 & 3 &
 \begin{solution}
 $-60$.
 \end{solution}
+
+\begin{problem}{G1}
+Compute the determinant of the matrix $\begin{bmatrix} 3 & -1 & 0  & 7 \\ 2 & 1 & 1 & -1  \\ 0 & 1 & 1 & 3 \\ 0 & 0 & 0 & 1   \end{bmatrix}$.
+\end{problem}
+\begin{solution}
+$2$
+\end{solution}
+
+\begin{problem}{G1}
+Compute the determinant of the matrix $\begin{bmatrix} 8 & 5 & 3 & 0 \\ 3 & 2 & 1 & 1 \\ 5 & -3 & 1 & -2 \\ -1 & 2 & 0 & 1\end{bmatrix} $.
+\end{problem}
+\begin{solution}
+$-1$.
+\end{solution}
