--- a/assessments/problems/M2.tex
+++ b/assessments/problems/M2.tex
@@ -1,13 +1,18 @@
 \begin{problem}{M2}
 Determine if the matrix $\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}$ is invertible.
 \end{problem}
-
+\begin{solution}
+The second column is a multiple of the first, so it is not invertible.
+\end{solution}
 
 
 
 \begin{problem}{M2}
 Determine if the matrix $\begin{bmatrix}-3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3\end{bmatrix}$ is invertible.
 \end{problem}
+\begin{solution}
+The determinant is $0$, so it is not invertible.
+\end{solution}
 
 
 \begin{problem}{M2} Determine if the matrix $\begin{bmatrix} 1 & 3 & -1 \\ 2 & 7 & 0 \\ -1 & -1 & 5 \end{bmatrix}$ is invertible.
@@ -19,5 +24,16 @@ So it is not invertible.
 
 
 \begin{problem}{M2}
-Determine if the matrix $\begin{bmatrix} 3 & -1 & 0 & 4 \\ 2 & 1 & 1 -1 \\ 0 & 1 & 1 & 3 \\ 1 & -2 & 0 & 0 \end{bmatrix}$ is invertible.
+Determine if the matrix $\begin{bmatrix} 3 & -1 & 0 & 4 \\ 2 & 1 & 1 & -1 \\ 0 & 1 & 1 & 3 \\ 1 & -2 & 0 & 0 \end{bmatrix}$ is invertible.
 \end{problem}
+\begin{solution}
+This matrix is row equivalent to the identity matrix, so it is invertible.
+\end{solution}
+
+
+\begin{problem}{M2}
+Determine if the matrix $\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}$ is invertible.
+\end{problem}
+\begin{solution}
+The determinant is $2$, so it is invertible.
+\end{solution}
