--- a/modules/5-M/day2.tex
+++ b/modules/5-M/day2.tex
@@ -3,17 +3,27 @@
 
 \begin{applicationActivities}{2}{22}
 
-\begin{activity}{0}
+\begin{activity}{5}
+Find a matrix $I \in M_{4,4}$ such that for any other matrix $A \in M_{4,n}$, $IA=A$.
+\end{activity}
+
+\begin{definition}
+The identity matrix $I_n \in M_{n,n}$ (sometimes written as just $I$ if $n$ is understood) is $$I_n = \begin{bmatrix} 1 & 0  & \hdots & 0 \\ 0 & 1 & \ddots & \vdots  \\ \vdots & \ddots & \ddots & 0 \\ 0 & \hdots & 0 & 1 \end{bmatrix}$$
+\end{definition}
+
+\begin{activity}{15}
 Each row operation can be interpreted as a matrix multiplication.  Let $A \in M_{4,4}$
 \begin{enumerate}[1)]
 \item Find a matrix $S_1$ such that $S_1A$ is the result of swapping the second and fourth rows of $A$.
 \item Find a matrix $S_2$ such that $S_2A$ is the result of adding $5$ times the third row of $A$ to the first.
 \item Find a matrix $S_3$ such that $S_3A$ is the result of doubling the fourth row of $A$.
 \end{enumerate}
+
+{\em Hint:  Tweak the identity matrix slightly.}
 \end{activity}
 
 
-\begin{activity}{0}
+\begin{activity}{15}
 Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (for the standard basis).  Consider the following statements about $T$
 \begin{enumerate}[(a)]
 \item $T$ is injective
@@ -33,7 +43,7 @@ Sort these statements into groups of equivalent statements.
 
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{5}
 Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (for the standard basis).
 
 If $T$ is injective, what must be true about how $m$ and $n$ are related?
@@ -46,7 +56,7 @@ If $T$ is injective, what must be true about how $m$ and $n$ are related?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{5}
 If $T$ is surjective, what must be true about how $m$ and $n$ are related?
 \begin{enumerate}[(a)]
 \item $m<n$
@@ -57,7 +67,7 @@ If $T$ is surjective, what must be true about how $m$ and $n$ are related?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{5}
   If $T$ is bijective, what must be true about how $m$ and $n$ are related?
 \begin{enumerate}[(a)]
 \item $m<n$
