--- a/modules/6-G/day2.tex
+++ b/modules/6-G/day2.tex
@@ -3,29 +3,25 @@
 
 \begin{applicationActivities}{2}{26}
 
-\begin{activity}{0}
-  How are $\det(A)$ and $\det(A^T)$ related?
-\begin{enumerate}[(a)]
-\item $\det(A)=\det(A^T)$
-\item $\det(A)=-\det(A^T)$
-\item $\det(A)=\frac{1}{\det(A^T)}$
-\item They are unrelated
+\begin{fact}
+By a geometric argument, one can show that the determinant of a matrix and its transpose are the same.    Thus, row operations behave like column operations.  In particular, we can use row reduction to compute determinants.
+\end{fact}
+
+\begin{fact}
+Row operations change the determinant in the following way
+\begin{enumerate}
+\item Elementary row operations (adding a multiple of one row to another) do not change the determinant.
+\item Diagonal operations (multiplying a row by a scalar) multiplies the determinant by the same amount.
+\item Swapping two rows multiplies the determinant by $-1$.
 \end{enumerate}
-\end{activity}
+\end{fact}
 
-\begin{observation}
-  Thus, row operations behave like column operations.  So we can use row reduction to compute determinants.
-\end{observation}
-
-\begin{activity}{0}
+\begin{activity}{10}
   Compute $\det \begin{bmatrix} 4 & 5 \\ 2 & 3 \end{bmatrix}$.
 \end{activity}
 
-\begin{activity}{0}
-  Compute $\det \begin{bmatrix} a & b \\ c & d \end{bmatrix}$
-\end{activity}
 
-\begin{activity}{0}
+\begin{activity}{10}
   Which of the following is the same as $\det \begin{bmatrix} 3 & -2 & 0 \\  5 & -1 & 0 \\  -2 & 4 & 1\end{bmatrix}$?
 \begin{enumerate}[(a)]
 \item $\det \begin{bmatrix} 3 & -2 \\ 5 & -1 \end{bmatrix}$
@@ -33,9 +29,10 @@
 \item $\det \begin{bmatrix} 5 & -1 \\ -2 & 4 \end{bmatrix}$
 \item None of these
 \end{enumerate}
+{\em Hint: Draw a picture}
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{5}
   Which of the following is the same as $\det \begin{bmatrix} 3 & 0 & 7 \\  5 & 1 & 2 \\  -2 & 0 & 6 \end{bmatrix}$?
 \begin{enumerate}[(a)]
 \item $\det \begin{bmatrix} 3 & 7 \\ 5 & 2 \end{bmatrix}$
@@ -45,15 +42,15 @@
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{5}
   Compute $\det \begin{bmatrix} 0 & 3 & -2 \\ 1 & 5 & 12 \\ 0 & 2 & -1 \end{bmatrix}$
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{10}
    Using the fact that $\begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix} = \begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} + \begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix}$, compute $\det \begin{bmatrix} 1 & 2 & 3 \\ 1 & -2 & 5 \\ 0 & 3 & 3 \end{bmatrix}$.
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{10}
    Compute $\begin{bmatrix} 2 & 3 & 5 & 0 \\ 0 & 1 & -1 & 0 \\ 1 & 2 & 0 & 3 \\ -1 & -1 & 2 & 2 \end{bmatrix}$
 \end{activity}
 
