--- a/modules/5-M/day1.tex
+++ b/modules/5-M/day1.tex
@@ -3,7 +3,7 @@
 
 \begin{applicationActivities}{1}{21}
 
-\begin{activity}{0}
+\begin{activity}{3}
 Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
 
 What is the domain of the composition map $S \circ T$?
@@ -15,7 +15,9 @@ What is the domain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{3}
+Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
+
 What is the codomain of the composition map $S \circ T$?
 \begin{enumerate}[(a)]
 \item $\IR$
@@ -25,7 +27,9 @@ What is the codomain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{4}
+Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
+
 The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \begin{enumerate}[(a)]
 \item $M_{4,3}$
@@ -37,16 +41,20 @@ The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{5}
+Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
+
 Compute $(S \circ T)(\vec{e}_1)$, $(S \circ T)(\vec{e}_2)$, and
 $(S \circ T)(\vec{e}_3)$.
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{5}
+Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
+
 Find the matrix corresponding to $S \circ T$ with respect to the standard bases.
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{2}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
 
 What is the domain of the composition map $S \circ T$?
@@ -58,7 +66,9 @@ What is the domain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{2}
+Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
+
 What is the codomain of the composition map $S \circ T$?
 \begin{enumerate}[(a)]
 \item $\IR$
@@ -68,7 +78,9 @@ What is the codomain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{2}
+Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
+
 The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \begin{enumerate}[(a)]
 \item $M_{2,2}$
@@ -78,37 +90,21 @@ The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{0}
-Compute $(S \circ T)(\vec{e}_1)$ and $(S \circ T)(\vec{e}_2)$
-\end{activity}
+%\begin{activity}{5}
+%Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
+%
+%Compute $(S \circ T)(\vec{e}_1)$ and $(S \circ T)(\vec{e}_2)$
+%\end{activity}
 
-\begin{activity}{0}
+\begin{activity}{5}
+Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
+
 Find the matrix corresponding to $S \circ T$ with respect to the standard bases.
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{2}
 Let $T: \IR^1 \rightarrow \IR^4$ be given by the matrix $B=\begin{bmatrix} 3 \\\ -2 \\ 1 \\ -1\end{bmatrix}$ and $S: \IR^4 \rightarrow \IR^1$ be given by the matrix $A=\begin{bmatrix}2 & 3 & 2 & 5 \end{bmatrix}$.
 
-What is the domain of the composition map $S \circ T$?
-\begin{enumerate}[(a)]
-\item $\IR$
-\item $\IR^2$
-\item $\IR^3$
-\item $\IR^4$
-\end{enumerate}
-\end{activity}
-
-\begin{activity}{0}
-What is the codomain of the composition map $S \circ T$?
-\begin{enumerate}[(a)]
-\item $\IR$
-\item $\IR^2$
-\item $\IR^3$
-\item $\IR^4$
-\end{enumerate}
-\end{activity}
-
-\begin{activity}{0}
 The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \begin{enumerate}[(a)]
 \item $M_{1,1}$
@@ -118,15 +114,21 @@ The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{0}
-  Compute $(S \circ T)(\vec{e}_1)$
-\end{activity}
+\begin{activity}{5}
+Let $T: \IR^1 \rightarrow \IR^4$ be given by the matrix $B=\begin{bmatrix} 3 \\\ -2 \\ 1 \\ -1\end{bmatrix}$ and $S: \IR^4 \rightarrow \IR^1$ be given by the matrix $A=\begin{bmatrix}2 & 3 & 2 & 5 \end{bmatrix}$.
 
-\begin{activity}{0}
   Find the matrix corresponding to $S \circ T$ with respect to the standard bases.
 \end{activity}
 
-\begin{activity}{0}
+\begin{definition}
+We define the product of two matrices $A \in M_{m,n}$ and $B \in M_{n,k}$ to be the matrix $AB \in M_{m,k}$ corresponding to the composition map of the two corresponding linear functions.
+\end{definition}
+
+\begin{fact}
+If $AB$ is defined, $BA$ need not be defined, and if it is defined, it is in general different from $AB$.
+\end{fact}
+
+\begin{activity}{5}
 Let $A=\begin{bmatrix} 3 & 1 & -1 \\ 2 & 0 & 4 \\ -1 & 3 & 5 \end{bmatrix}$ and $X=\begin{bmatrix} x \\ y \\ z \end{bmatrix}$
 \begin{enumerate}
 \item Compute $AX$
