--- a/modules/3-S/day1.tex
+++ b/modules/3-S/day1.tex
@@ -13,8 +13,8 @@
   \begin{bmatrix}4\\3\\0\\2\end{bmatrix}
   \right\}
   \]
-  and showed that \(\vspan S\not=\IR^4\). Find two vectors that
-  are in the span of the other three vectors.
+  and showed that \(\vspan S\not=\IR^4\). Find two vectors from this set
+  that are linear combinations of the other three vectors.
 
   \begin{TBLnote}
     Actually, the activity involved the corresponding vectors in \(\P^3\).
@@ -28,7 +28,7 @@
 \end{definition}
 
 \begin{activity}{10}
-  Suppose \(x_1\vect v_1+x_2\vect v_2=\vect v_3\), so the set
+  Suppose \(a\vect v_1+b\vect v_2=\vect v_3\), so the set
   \(\{\vect v_1,\vect v_2,\vect v_3\}\) is linearly dependent.
   Is the vector equation \(x_1\vect v_1+x_2\vect v_2+x_3\vect v_3=\vect 0\)
   consistent with one solution, consistent with infinitely many solutions,
@@ -50,7 +50,7 @@
   -1&3&16&14&2&0
   \end{bmatrix}
   \]
-  and circle the part of the matrix that demonstrates that
+  and mark the part of the matrix that demonstrates that
   \[S=\left\{
   \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
   \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
@@ -69,8 +69,19 @@
   has a column without a pivot position.
 \end{fact}
 
-\begin{activity}{15} TODO
-  (compute RREF and label each set of vectors as linearly independent/dependent)
+\begin{activity}{5}
+  Is the set of Euclidean vectors \(\left\{
+  \begin{bmatrix}-4\\2\\3\\0\\-1\end{bmatrix},
+  \begin{bmatrix}1\\2\\0\\0\\3\end{bmatrix},
+  \begin{bmatrix}1\\10\\10\\2\\6\end{bmatrix},
+  \begin{bmatrix}3\\4\\7\\2\\1\end{bmatrix}
+  \right\}\) linearly dependent or linearly independent?
+\end{activity}
+
+\begin{activity}{10}
+  Is the set of polynomials \(\left\{
+  x^3+1,x^2+2,4-7x,2x^3+x
+  \right\}\) linearly dependent or linearly independent?
 \end{activity}
 
 \end{applicationActivities}
