tweak Spart1 activity per #59

--- a/modules/3-S/day1.tex
+++ b/modules/3-S/day1.tex
@@ -28,7 +28,7 @@
 \end{definition}
 
 \begin{activity}{10}
-  Suppose \(a\vect v_1+b\vect v_2=\vect v_3\), so the set
+  Suppose \(3\vect v_1-5\vect v_2=\vect v_3\), so the set
   \(\{\vect v_1,\vect v_2,\vect v_3\}\) is linearly dependent.
   Is the vector equation \(x_1\vect v_1+x_2\vect v_2+x_3\vect v_3=\vect 0\)
   consistent with one solution, consistent with infinitely many solutions,
